--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/css/uikit.min.css"/>
-        <link href="uikit" rel="stylesheet">
+        <link href="uikit" type="text/html" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="style.css">
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.11/js/uikit.min.js" 
@@ -98,8 +98,10 @@
         </div>
           <h1>Welcome to S0lely NewZ</h1>
           <h2>Your best source for the latest and greates Sneaker Articles</h2>
-         <div id="articles"></div>
-         <div id="notes"></div>
+        <div class="article-wrapper uk-flex-middle uk-flex-space-between">
+          <div id="articles"></div>
+          <div id="notes"></div>     
+      </div>   
     </div>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
